<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item android:id="@+id/nav_profile" android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_menu_history"
            android:title="@string/past" />
        <item android:id="@+id/nav_plan" android:icon="@drawable/ic_menu_plan"
            android:title="@string/plan" />
        <item android:id="@+id/nav_unwilling" android:icon="@drawable/ic_menu_unwilling"
            android:title="@string/unwilling" />
        <item android:id="@+id/nav_logout" android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>

</menu>