<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BaseActivity"
    android:fillViewport="true"
    android:layout_weight="1"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <include layout="@layout/selected_match" />

        <android.support.v7.widget.CardView
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Title"
                    android:text="@string/refuse_title" />

                <Space
                    android:layout_height="20dp"
                    android:layout_width="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_motivation"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="19sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp" />

                <Space
                    android:layout_height="25dp"
                    android:layout_width="match_parent" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/motivations_spinner"
                    android:entries="@array/motivations"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>

                <Space
                    android:layout_height="32dp"
                    android:layout_width="match_parent" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="30dp"
                    android:id="@+id/reject_button"
                    android:text="@string/reject_button_text"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
