<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".BaseActivity"
        android:id="@+id/scrollView"
        android:layout_weight="1"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <include layout="@layout/selected_match"/>

            <android.support.v7.widget.CardView style="@style/CardView"
                android:clickable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/itinerary"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>

                    <com.basket.basketmanager.NonScrollableListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:choiceMode="multipleChoiceModal"
                        android:id="@+id/itinerary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_step"
            android:id="@+id/add_button"
            android:layout_marginLeft="-5dp"
            android:layout_weight="1" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:id="@+id/confirm_button"
            android:layout_marginRight="-5dp"
            android:layout_weight="2" />

    </LinearLayout>
</LinearLayout>